--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -14,7 +14,7 @@
         <h1>Firebase + Chrome MV3 Login</h1>
             <form>
                 <div class="social__login">
-                    <a href="#" class="btn btn__google"><i class="fa fa-google"></i>GOOGLE</a>
+                    <a href="#" class="btn btn__google"><i class="fa fa-google"></i>GOOGLE Sign In</a>
                 </div>
         </div>
     </div>
